Link html scss ok

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cours SASS</title>
+    <link rel="stylesheet" href="./assets/styles/index.css">
 </head>
 <body>
+    
     <h1>J'apprends SASS</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat qui, voluptatibus veniam ab sapiente iste unde rem hic non error neque totam perspiciatis molestiae obcaecati explicabo aliquid quia minus tempore facilis commodi odit provident sequi et. Maiores autem consequuntur distinctio explicabo facere similique deserunt, optio eos nobis id. Ullam, mollitia. Aliquam, quam et fuga ab nostrum dolorum quibusdam neque sequi nesciunt ducimus! A quis, cum excepturi, laudantium deserunt numquam beatae expedita cumque consectetur quos ratione tenetur error deleniti animi vel.</p>
 </body>
